--- a/dhtml/with-modules/css/app.css
+++ b/dhtml/with-modules/css/app.css
@@ -222,10 +222,6 @@ button {
   box-shadow: inset 0 1px 4px 0 hsla(10, 90%, 20%, .5), inset 0 0 0 3px hsla(0, 0%, 0%, .07), 0 1px 1px 1px hsla(0, 100%, 100%, .2);
 }
 
-/* .board__column:hover {
-  background-color: #2D353C;
-} */
-
 .players__header--turn {
   margin-bottom: 12vh;
   font-size: var(--font-size-6);
@@ -303,6 +299,7 @@ button {
   background-color: var(--gray-7);
   font-size: var(--font-size-4);
   text-align: left;
+  cursor: pointer;
 }
 
 .board__wrapper {
@@ -325,6 +322,10 @@ button {
   display: grid;
   grid-template-columns: repeat(7, calc(100%/7));
   grid-template-rows: repeat(6, auto);
+}
+
+.board__column:hover {
+  background-color: skyblue;
 }
 
 .board__cell {
@@ -410,22 +411,7 @@ button {
   font-size: 12px;
   border-radius: 8px;
   font-weight: bold;
-}
-
-.board__column:hover {
-  background-color: skyblue;
-}
-
-.board__column::before {
-  content: "";
-  display: block;
-  height: .5rem;
-  width: 0;
-  background-color: black;
-}
-
-.board__column:hover::before {
-  width: 100%;
+  cursor: pointer;
 }
 
 /* UTILITIES ---------------------------------------------------------*/
