--- a/dhtml/with-modules/css/app.css
+++ b/dhtml/with-modules/css/app.css
@@ -207,8 +207,13 @@ button {
   box-shadow: inset 0 2px 10px 0 hsla(0, 0%, 0%, .7), 0 1px 1px 1px hsla(0, 100%, 100%, .3);
 }
 
-.board__input:checked ~ .board__checker {
+.turn-yellow:hover .board__input ~ .board__checker {
   background-color: var(--yellow-4);
+  box-shadow: inset 0 1px 4px 0 hsla(40, 20%, 20%, .5), inset 0 0 0 3px hsla(40, 50%, 100%, .3), 0 1px 1px 1px hsla(0, 100%, 100%, .2);
+}
+
+.turn-red:hover .board__input ~ .board__checker {
+  background-color: var(--red-7);
   box-shadow: inset 0 1px 4px 0 hsla(40, 20%, 20%, .5), inset 0 0 0 3px hsla(40, 50%, 100%, .3), 0 1px 1px 1px hsla(0, 100%, 100%, .2);
 }
 
@@ -326,10 +331,6 @@ button {
   display: grid;
   grid-template-columns: repeat(7, calc(100%/7));
   grid-template-rows: repeat(6, auto);
-}
-
-.board__column:hover {
-  background-color: skyblue;
 }
 
 .board__cell {
