--- a/dhtml/with-modules/src/DoubleDispatch/views/css/app.css
+++ b/dhtml/with-modules/src/DoubleDispatch/views/css/app.css
@@ -217,14 +217,18 @@ button {
   box-shadow: inset 0 1px 4px 0 hsla(40, 20%, 20%, .5), inset 0 0 0 3px hsla(40, 50%, 100%, .3), 0 1px 1px 1px hsla(0, 100%, 100%, .2);
 }
 
-.has-yellow :checked ~ .board__checker {
+.board__cell--has-yellow :checked ~ .board__checker {
   background-color: var(--yellow-4);
   box-shadow: inset 0 1px 4px 0 hsla(40, 20%, 20%, .5), inset 0 0 0 3px hsla(40, 50%, 100%, .3), 0 1px 1px 1px hsla(0, 100%, 100%, .2);
 }
 
-.has-red :checked ~ .board__checker {
+.board__cell--has-red :checked ~ .board__checker {
   background-color: var(--red-7);
   box-shadow: inset 0 1px 4px 0 hsla(10, 90%, 20%, .5), inset 0 0 0 3px hsla(0, 0%, 0%, .07), 0 1px 1px 1px hsla(0, 100%, 100%, .2);
+}
+
+.board__cell--highlight :checked ~ .board__checker {
+  box-shadow: 0 0 15px #333;
 }
 
 .players__header--turn {
