enable and disable events

--- a/dhtml/with-modules/src/DoubleDispatch/views/index.html
+++ b/dhtml/with-modules/src/DoubleDispatch/views/index.html
@@ -49,31 +49,31 @@
     
         <main class="board__wrapper">
             <div class="board">
-                <div id="cell-50" class="board__header board__cell" role="0">
+                <div id="cell-50" class="board__header board__cell" data-column="0">
                     <input id="checker-50" type="checkbox" class="board__input" name="checker-50" disabled>
                     <label for="checker-50" class="board__checker"></label>
                 </div>
-                <div id="cell-51" class="board__header board__cell" role="1">
+                <div id="cell-51" class="board__header board__cell" data-column="1">
                     <input id="checker-51" type="checkbox" class="board__input" name="checker-51" disabled>
                     <label for="checker-51" class="board__checker"></label>
                 </div>
-                <div id="cell-52" class="board__header board__cell" role="2">
+                <div id="cell-52" class="board__header board__cell" data-column="2">
                     <input id="checker-52" type="checkbox" class="board__input" name="checker-52" disabled>
                     <label for="checker-52" class="board__checker"></label>
                 </div>
-                <div id="cell-53" class="board__header board__cell"  role="3">
+                <div id="cell-53" class="board__header board__cell"  data-column="3">
                     <input id="checker-53" type="checkbox" class="board__input" name="checker-53" disabled>
                     <label for="checker-53" class="board__checker"></label>
                 </div>
-                <div id="cell-54" class="board__header board__cell" role="4">
+                <div id="cell-54" class="board__header board__cell" data-column="4">
                     <input id="checker-54" type="checkbox" class="board__input" name="checker-54" disabled>
                     <label for="checker-54" class="board__checker"></label>
                 </div>
-                <div id="cell-55" class="board__header board__cell" role="5">
+                <div id="cell-55" class="board__header board__cell" data-column="5">
                     <input id="checker-55" type="checkbox" class="board__input" name="checker-55" disabled>
                     <label for="checker-55" class="board__checker"></label>
                 </div>
-                <div id="cell-56" class="board__header board__cell" role="6">
+                <div id="cell-56" class="board__header board__cell" data-column="6">
                     <input id="checker-56" type="checkbox" class="board__input" name="checker-56" disabled>
                     <label for="checker-56" class="board__checker"></label>
                 </div>
